refactoring & clean-up all the three explicit refinement strategies follow now a similar protocol
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@5922 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c